// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enchant map: agathion (stable) 1`] = `
Map {
  "Агатион" => Object {
    "cost": "Свиток: Модифицировать Агатиона",
    "item": "Агатион",
    "results": Array [
      Object {
        "chance": 100,
        "item": "Агатион +1",
      },
      Object {
        "chance": 0,
        "item": "Nothing",
      },
    ],
  },
  "Агатион +1" => Object {
    "cost": "Свиток: Модифицировать Агатиона",
    "item": "Агатион +1",
    "results": Array [
      Object {
        "chance": 100,
        "item": "Агатион +2",
      },
      Object {
        "chance": 0,
        "item": "Nothing",
      },
    ],
  },
  "Агатион +2" => Object {
    "cost": "Свиток: Модифицировать Агатиона",
    "item": "Агатион +2",
    "results": Array [
      Object {
        "chance": 100,
        "item": "Агатион +3",
      },
      Object {
        "chance": 0,
        "item": "Nothing",
      },
    ],
  },
  "Агатион +3" => Object {
    "cost": "Свиток: Модифицировать Агатиона",
    "item": "Агатион +3",
    "results": Array [
      Object {
        "chance": 65,
        "item": "Агатион +4",
      },
      Object {
        "chance": 35,
        "item": "Nothing",
      },
    ],
  },
  "Агатион +4" => Object {
    "cost": "Свиток: Модифицировать Агатиона",
    "item": "Агатион +4",
    "results": Array [
      Object {
        "chance": 50,
        "item": "Агатион +5",
      },
      Object {
        "chance": 50,
        "item": "Nothing",
      },
    ],
  },
  "Агатион +5" => Object {
    "cost": "Стабильный Свиток: Модифицировать Агатиона",
    "item": "Агатион +5",
    "results": Array [
      Object {
        "chance": 35,
        "item": "Агатион +6",
      },
      Object {
        "chance": 65,
        "item": "Агатион +5",
      },
    ],
  },
  "Агатион +6" => Object {
    "cost": "Стабильный Свиток: Модифицировать Агатиона",
    "item": "Агатион +6",
    "results": Array [
      Object {
        "chance": 12,
        "item": "Агатион +7",
      },
      Object {
        "chance": 88,
        "item": "Агатион +6",
      },
    ],
  },
  "Агатион +7" => Object {
    "cost": "Стабильный Свиток: Модифицировать Агатиона",
    "item": "Агатион +7",
    "results": Array [
      Object {
        "chance": 9,
        "item": "Агатион +8",
      },
      Object {
        "chance": 91,
        "item": "Агатион +7",
      },
    ],
  },
  "Агатион +8" => Object {
    "cost": "Стабильный Свиток: Модифицировать Агатиона",
    "item": "Агатион +8",
    "results": Array [
      Object {
        "chance": 7,
        "item": "Агатион +9",
      },
      Object {
        "chance": 93,
        "item": "Агатион +8",
      },
    ],
  },
  "Агатион +9" => Object {
    "cost": "Стабильный Свиток: Модифицировать Агатиона",
    "item": "Агатион +9",
    "results": Array [
      Object {
        "chance": 4,
        "item": "Агатион +10",
      },
      Object {
        "chance": 96,
        "item": "Агатион +9",
      },
    ],
  },
}
`;

exports[`enchant map: agathion 1`] = `
Map {
  "Агатион" => Object {
    "cost": "Свиток: Модифицировать Агатиона",
    "item": "Агатион",
    "results": Array [
      Object {
        "chance": 100,
        "item": "Агатион +1",
      },
      Object {
        "chance": 0,
        "item": "Nothing",
      },
    ],
  },
  "Агатион +1" => Object {
    "cost": "Свиток: Модифицировать Агатиона",
    "item": "Агатион +1",
    "results": Array [
      Object {
        "chance": 100,
        "item": "Агатион +2",
      },
      Object {
        "chance": 0,
        "item": "Nothing",
      },
    ],
  },
  "Агатион +2" => Object {
    "cost": "Свиток: Модифицировать Агатиона",
    "item": "Агатион +2",
    "results": Array [
      Object {
        "chance": 100,
        "item": "Агатион +3",
      },
      Object {
        "chance": 0,
        "item": "Nothing",
      },
    ],
  },
  "Агатион +3" => Object {
    "cost": "Свиток: Модифицировать Агатиона",
    "item": "Агатион +3",
    "results": Array [
      Object {
        "chance": 65,
        "item": "Агатион +4",
      },
      Object {
        "chance": 35,
        "item": "Nothing",
      },
    ],
  },
  "Агатион +4" => Object {
    "cost": "Свиток: Модифицировать Агатиона",
    "item": "Агатион +4",
    "results": Array [
      Object {
        "chance": 50,
        "item": "Агатион +5",
      },
      Object {
        "chance": 50,
        "item": "Nothing",
      },
    ],
  },
  "Агатион +5" => Object {
    "cost": "Свиток: Модифицировать Агатиона",
    "item": "Агатион +5",
    "results": Array [
      Object {
        "chance": 35,
        "item": "Агатион +6",
      },
      Object {
        "chance": 65,
        "item": "Nothing",
      },
    ],
  },
  "Агатион +6" => Object {
    "cost": "Свиток: Модифицировать Агатиона",
    "item": "Агатион +6",
    "results": Array [
      Object {
        "chance": 12,
        "item": "Агатион +7",
      },
      Object {
        "chance": 88,
        "item": "Nothing",
      },
    ],
  },
  "Агатион +7" => Object {
    "cost": "Свиток: Модифицировать Агатиона",
    "item": "Агатион +7",
    "results": Array [
      Object {
        "chance": 9,
        "item": "Агатион +8",
      },
      Object {
        "chance": 91,
        "item": "Nothing",
      },
    ],
  },
  "Агатион +8" => Object {
    "cost": "Свиток: Модифицировать Агатиона",
    "item": "Агатион +8",
    "results": Array [
      Object {
        "chance": 7,
        "item": "Агатион +9",
      },
      Object {
        "chance": 93,
        "item": "Nothing",
      },
    ],
  },
  "Агатион +9" => Object {
    "cost": "Свиток: Модифицировать Агатиона",
    "item": "Агатион +9",
    "results": Array [
      Object {
        "chance": 4,
        "item": "Агатион +10",
      },
      Object {
        "chance": 96,
        "item": "Nothing",
      },
    ],
  },
  "Агатион +10" => Object {
    "cost": Map {
      "Адена" => 3000000,
      "Камень Души Агатиона" => 1,
    },
    "item": "Агатион +10",
    "results": Array [
      Object {
        "chance": 100,
        "item": "Агатион Высокого Качества",
      },
    ],
  },
  "Агатион Высокого Качества" => Object {
    "cost": "Стабильный Свиток Высокого Качества: Модифицировать Агатиона",
    "item": "Агатион Высокого Качества",
    "results": Array [
      Object {
        "chance": 40,
        "item": "Агатион Высокого Качества +1",
      },
      Object {
        "chance": 60,
        "item": "Агатион Высокого Качества",
      },
    ],
  },
  "Агатион Высокого Качества +1" => Object {
    "cost": "Стабильный Свиток Высокого Качества: Модифицировать Агатиона",
    "item": "Агатион Высокого Качества +1",
    "results": Array [
      Object {
        "chance": 40,
        "item": "Агатион Высокого Качества +2",
      },
      Object {
        "chance": 60,
        "item": "Агатион Высокого Качества +1",
      },
    ],
  },
  "Агатион Высокого Качества +2" => Object {
    "cost": "Стабильный Свиток Высокого Качества: Модифицировать Агатиона",
    "item": "Агатион Высокого Качества +2",
    "results": Array [
      Object {
        "chance": 40,
        "item": "Агатион Высокого Качества +3",
      },
      Object {
        "chance": 60,
        "item": "Агатион Высокого Качества +2",
      },
    ],
  },
  "Агатион Высокого Качества +3" => Object {
    "cost": "Стабильный Свиток Высокого Качества: Модифицировать Агатиона",
    "item": "Агатион Высокого Качества +3",
    "results": Array [
      Object {
        "chance": 30,
        "item": "Агатион Высокого Качества +4",
      },
      Object {
        "chance": 70,
        "item": "Агатион Высокого Качества +3",
      },
    ],
  },
  "Агатион Высокого Качества +4" => Object {
    "cost": "Стабильный Свиток Высокого Качества: Модифицировать Агатиона",
    "item": "Агатион Высокого Качества +4",
    "results": Array [
      Object {
        "chance": 30,
        "item": "Агатион Высокого Качества +5",
      },
      Object {
        "chance": 70,
        "item": "Агатион Высокого Качества +4",
      },
    ],
  },
  "Агатион Высокого Качества +5" => Object {
    "cost": "Стабильный Свиток Высокого Качества: Модифицировать Агатиона",
    "item": "Агатион Высокого Качества +5",
    "results": Array [
      Object {
        "chance": 30,
        "item": "Агатион Высокого Качества +6",
      },
      Object {
        "chance": 70,
        "item": "Агатион Высокого Качества +5",
      },
    ],
  },
  "Агатион Высокого Качества +6" => Object {
    "cost": "Стабильный Свиток Высокого Качества: Модифицировать Агатиона",
    "item": "Агатион Высокого Качества +6",
    "results": Array [
      Object {
        "chance": 20,
        "item": "Агатион Высокого Качества +7",
      },
      Object {
        "chance": 80,
        "item": "Агатион Высокого Качества +6",
      },
    ],
  },
  "Агатион Высокого Качества +7" => Object {
    "cost": "Стабильный Свиток Высокого Качества: Модифицировать Агатиона",
    "item": "Агатион Высокого Качества +7",
    "results": Array [
      Object {
        "chance": 20,
        "item": "Агатион Высокого Качества +8",
      },
      Object {
        "chance": 80,
        "item": "Агатион Высокого Качества +7",
      },
    ],
  },
  "Агатион Высокого Качества +8" => Object {
    "cost": "Стабильный Свиток Высокого Качества: Модифицировать Агатиона",
    "item": "Агатион Высокого Качества +8",
    "results": Array [
      Object {
        "chance": 20,
        "item": "Агатион Высокого Качества +9",
      },
      Object {
        "chance": 80,
        "item": "Агатион Высокого Качества +8",
      },
    ],
  },
  "Агатион Высокого Качества +9" => Object {
    "cost": "Стабильный Свиток Высокого Качества: Модифицировать Агатиона",
    "item": "Агатион Высокого Качества +9",
    "results": Array [
      Object {
        "chance": 10,
        "item": "Агатион Высокого Качества +10",
      },
      Object {
        "chance": 90,
        "item": "Агатион Высокого Качества +9",
      },
    ],
  },
}
`;
